# vappusaa

./: .gitignore  Dockerfile  README.md  pyproject.toml  tasks.py
src/: app.py
src/lib/: weather.py
src/templates/: index.html
