[tool.poetry]
name = "vappusaa"
version = "0.1.0"
description = ""
authors = ["Tony Lam <tony.lam@iki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
invoke = "^2.2.0"
requests = "^2.32.3"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
